--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="col-lg-3">
             <div class="card">
               <div class="card-header">
-                <h2><a href="" class="headingLink">Forms</a></h2>
+                <h2><a href="forms.html" class="headingLink">Forms</a></h2>
               </div>
               <div class="card-body">
                 <a href="forms.html"><img src="images/Form.png" height="250px" width="300px" alt="forms"  /></a>
@@ -143,7 +143,7 @@
           <div class="col-lg-3">
             <div class="card">
               <div class="card-header">
-                <h2><a href="" class="headingLink">Adjustments</a></h2>
+                <h2><a href="adjustments.html" class="headingLink">Adjustments</a></h2>
               </div>
               <div class="card-body">
                 <a href="adjustments.html"><img src="images/Adjustments.png" height="250px" width="300px" alt="adjustments.html"  /></a>
