--- a/elements.html
+++ b/elements.html
@@ -64,7 +64,7 @@
       <main> <!--using main is a semantic div for screen readers-->
         <div class="standardContents">
           <h1 class="headingTopPadding" id="maincontent">Elements</h1>
-          <p>Web pages are made up for many different parts, which are called elements. Each of these elements have different properties and uses.  Think of a web page as a bit like a car. Parts such as wheels, tyres, an engine, a frame and windows, when put together form a car. The most common elements on a web page are paragraphs, headings (titles in a page), links, images, videos and form controls (elements where you can input data). Different kinds of elements are discussed below. For more detail on how to navigate and use interactive elements see the <a href="/focus.html">focus</a> and <a href="/forms.html">forms</a> pages.</p>
+          <p>Web pages are made up of many different parts, which are called elements. Each of these elements have different properties and uses.  Think of a web page as a bit like a car. Parts such as wheels, tyres, an engine, a frame and windows, when put together form a car. The most common elements on a web page are paragraphs, headings (titles in a page), links, images, videos and form controls (elements where you can input data). Different kinds of elements are discussed below. For more detail on how to navigate and use interactive elements see the <a href="/focus.html">focus</a> and <a href="/forms.html">forms</a> pages.</p>
           <section role="region" aria-labelledby="paragraphs">
             <h2 class="headingTopPadding" id="paragraphs">Paragraphs</h2>
             <hr>
