--- a/forms.html
+++ b/forms.html
@@ -422,12 +422,11 @@
             appears to help the user find the right dates. There are many different kinds of date picker calendars, so there is no one simple way in which a user who cannot use a mouse can access them. The simplest way to use a date input box for non-mouse users is
             just to type in the date, in the format required. </p>
           <p>Below is an example of a date input box with a date picker. As the user types in a date a calendar pops up. It is not necessary to use the popup calendar, users can just type in the date needed using the DD/MM/YYYY format (e.g. 1st of
-            January 2019 would be 01/01/2019). When the submit button is activated, the focus will return to the beginning of the page.</p>
+            January 2019 would be 01/01/2019).</p>
           <form class="exampleMarginLeft" method="post">
             <div class="form-group">
 
               <label for="date">Date</label><input id="date" autocomplete="off" name="date" placeholder="DD/MM/YYYY" type="text" />
-              <button class="btn btn-dark" name="submit" type="submit" id="dateSubmit">Submit</button>
             </div>
           </form>
 
