--- a/focus.html
+++ b/focus.html
@@ -99,7 +99,7 @@
           <section role="region" aria-labelledby="keyboardTrap">
             <h2 class="headingTopPadding" id="keyboardTrap">Keyboard Trap</h2>
             <hr>
-            <p>A keyboard trap occurs when a user can reach an element or set of elements using the TAB key, but cannot navigate away from that element or set of elements using the TAB key. This only happens if the page has been poorly designed. One way out of a keyboard trap for users who cannot use the mouse is by refreshing the page (F5 key), which can put the focus back onto the beginning of the page depending on the browser. However with some browsers refreshing does not put the focus back onto the beginning of the page so the focus remains stuck in the keyboard trap. In that case the page will need to be closed by pressing the ALT + F4 keys in Windows or Command W on Mac.</p>
+            <p>A keyboard trap occurs when a user can reach an element or set of elements using the TAB key, but cannot navigate away from that element or set of elements using the TAB key. This only happens if the page has been poorly designed. One way out of a keyboard trap for users who cannot use the mouse is by refreshing the page (F5 key), which can put the focus back onto the beginning of the page depending on the browser. However with some browsers, refreshing does not put the focus back onto the beginning of the page so the focus remains stuck in the keyboard trap. In that case the page will need to be closed by pressing the ALT + F4 keys in Windows or Command W on Mac.</p>
             <p>There is a keyboard trap in the example form below. There are three input boxes. The focus will get stuck in the second input box.</p>
             <form>
               <fieldset>
